--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <!-- Page Title -->
-  <title>Shrimp IDN - Special Shrimp From Indonesia</title>
+  <title>CHADI-EXPORT - Special Shrimp From Indonesia</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.png" />
   <!-- Stylesheets -->
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="st-main-header-in">
           <div class="st-site-branding">
-            <a href="#" class="st-logo-link"><img src="assets/img/light-img/logo.png" alt="demo"></a>
+            <a href="#" class="st-logo-link"><img src="assets/img/light-img/chadiheader-logo.png" alt="demo"></a>
           </div>
           <!-- For Site Title -->
           <!-- <span class="st-site-title">
@@ -91,12 +91,12 @@
       <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
-            <h1 class="st-hero-title">Shrimp IDN <br />Special From Indonesia!</h1>
+            <h1 class="st-hero-title">Chadi Export <br />Special From Indonesia!</h1>
             <div class="st-hero-subtitle">
               Providing the best quality shrimp and produced directly from our local fishermen.
             </div>
             <div class="st-btn-group st-style1">
-              <a href="#" class="st-btn st-style1 st-color1">Contact us on whatsapp</a>
+              <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-color1">Contact us on whatsapp</a>
               <!-- <a href="https://www.youtube.com/embed/jRcfE2xxSAw?autoplay=1" class="st-btn st-style2 st-video-open"><i class="flaticon-multimedia"></i> Watch Video</a> -->
             </div>
           </div>
@@ -170,7 +170,7 @@
           <div class="col-lg-6">
             <div class="st-vertical-middle">
               <div class="st-vertical-middle-in">
-                <div class="st-about-img wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s"><img src="assets/img/light-img/about-img1.png" alt="demo"></div>
+                <div class="st-about-img wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s"><img src="assets/img/light-img/chadi1.png" alt="demo"></div>
               </div>
             </div>
           </div>
@@ -482,7 +482,7 @@
     <!-- End Team Section -->
 
     <!-- Start CTA Section -->
-    <!-- <section class="st-cta-wrap st-gray-bg">
+    <section class="st-cta-wrap st-gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 offset-lg-1">
@@ -490,7 +490,7 @@
               <h2 class="st-cta-title">Order us right now!</h2>
               <div class="st-cta-text">so you can get the best quality shrimp from our country. We will provide the best quality that you will definitely like and enjoy from the quality of our products</div>
               <div class="st-cta-btn">
-                <a href="#" class="st-btn st-style1 st-size1 st-color1">Contact us on whatsapp !</a>
+                <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-size1 st-color1">Contact us on whatsapp !</a>
               </div>
             </div>
           </div>
@@ -498,14 +498,14 @@
             <div class="st-vertical-middle">
               <div class="st-vertical-middle-in st-flex">
                 <div class="st-cta-img wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
-                  <img src="assets/img/light-img/cta-img.png" alt="demo">
+                  <img src="assets/img/type/udang3.png" alt="demo">
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- End CTA Section -->
 
     <!-- Start Pricing Plan -->
@@ -710,43 +710,7 @@
     <!-- End Testimonial Section -->
 
     <!-- Start News Letter Section -->
-    <section class="st-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="st-newsletter-wrap">
-              <div class="st-left-newsletter">
-                <div class="st-section-heading st-style1 st-type1">
-                  <h3>Just a moment</h3>
-                  <h2>Contact As Right Now</h2>
-                </div>
-                <div class="st-newsletter">
-                  <div class="st-newsletter-text">Contact us for the best shrimp deals.</div>
-                  <form class="mailchimp st-subscribe-form" action="https://storerepublic.us12.list-manage.com/subscribe/post?u=d227d8d335060b093084903d0&amp;id=9ba078ceb0">
-                    <!-- <input type="email" name="subscribe" id="subscriber-email" placeholder="Enter your Email"> -->
-                    <button type="submit" id="subscribe-button" class="st-newsletter-btn"><i class="flaticon-plane"></i></button>
-                    <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
-                    <h5 class="subscription-success"> .</h5>
-                    <h5 class="subscription-error"> .</h5>
-                    <label class="subscription-label" for="subscriber-email"></label>
-                  </form>
-                </div>
-              </div>
-              <div class="st-right-newsletter">
-                <div class="st-newsletter-img wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                  <img src="assets/img/light-img/news-letter-img.png" alt="demo">
-                  <div class="st-bard-animation">
-                    <div class="st-bard-animation1"><img src="assets/img/light-img/bard1.png" alt="demo"></div>
-                    <div class="st-bard-animation2"><img src="assets/img/light-img/bard2.png" alt="demo"></div>
-                    <div class="st-bard-animation3"><img src="assets/img/light-img/bard3.png" alt="demo"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+   
     <!-- End News Letter Section -->
 
     <!-- Start Contact Section -->
@@ -783,8 +747,8 @@
                 <ul>
                   <li><i class="fas fa-map-signs"></i>Syek Yusuf Gowa No 12</li>
                   <li><i class="fas fa-phone"></i>+62 85173354689</li>
-                  <li><i class="fas fa-envelope"></i><a href="#">support@limty.com</a></li>
-                  <li><i class="fas fa-globe"></i><a href="#">www.limty.com</a></li>
+                  <li><i class="fas fa-envelope"></i><a href="#">admin@chadiexport.com</a></li>
+                  <li><i class="fas fa-globe"></i><a href="#">www.chadiexport.com</a></li>
                 </ul>
               </div>
               <div class="st-svg-animation1">
@@ -852,7 +816,7 @@
       </div>
     </div>
     <div class="st-copyright text-center">
-        <div class="st-copyright-text">© SHRIMPIDN, 2023. Developed by <a href="#">SHRIMPIDN</a></div>
+        <div class="st-copyright-text">© CHADIEXPORT, 2023. Developed by <a href="#">CHADI-EXPORT</a></div>
     </div>
   </footer>
   <!-- End Footer Seciton -->
