--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta name="author" content="laralink" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
+  <meta name="shrimp" content="shrimp quality export" />
+  <meta name="shrimps" content="shrimp quality export" />
+
+
   <!-- Page Title -->
   <title>CHADI-EXPORT - Special Shrimp From Indonesia</title>
   <!-- Favicon Icon -->
@@ -91,7 +95,7 @@
       <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
-            <h1 class="st-hero-title">Chadi Export <br />Special From Indonesia!</h1>
+            <h1 class="st-hero-title">Chadi Export <br />Shrimp Special From Indonesia!</h1>
             <div class="st-hero-subtitle">
               Providing the best quality shrimp and produced directly from our local fishermen.
             </div>
@@ -250,8 +254,8 @@
           <div class="col-lg-3 col-sm-6">
             <div class="st-funfact text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <div class="st-funfact-icon"><i class="flaticon-rate"></i></div>
-              <h2 class="st-funfact-number st-counter">20</h2>
-              <h3 class="st-funfact-title">Trusted</h3>
+              <h2 class="st-funfact-number st-counter">10</h2>
+              <h3 class="st-funfact-title">Trusted Client</h3>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
@@ -264,7 +268,7 @@
           <div class="col-lg-3 col-sm-6">
             <div class="st-funfact text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
               <div class="st-funfact-icon"><i class="flaticon-laptop"></i></div>
-              <h2 class="st-funfact-number st-counter">100</h2>
+              <h2 class="st-funfact-number st-counter">30</h2>
               <h3 class="st-funfact-title">Experts Worker</h3>
             </div>
           </div>
@@ -290,37 +294,37 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>This is a great place to tell people more about your services and peak <br>their interest. Last year our latest work album</p>
+          <p>This is our shrimp fortfolio of the highest quality</p>
         </div>
       </div>
       <div class="st-project st-project-carousel owl-carousel st-style1 st-owl-controler1">
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/udang1.png">
           <div class="st-project-meta">
-            <h3>Udang</h3>
+            <h3>Shrimp</h3>
             <span>Branding</span>
           </div>
         </a>
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/udang2.png">
           <div class="st-project-meta">
-            <h3>Udang</h3>
+            <h3>Shrimp</h3>
             <span>Branding</span>
           </div>
         </a>
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/type/udang3.png">
           <div class="st-project-meta">
-            <h3>Udang</h3>
+            <h3>Shrimp</h3>
             <span>Branding</span>
           </div>
         </a>
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/type/udang4.png">
           <div class="st-project-meta">
-            <h3>Udang</h3>
+            <h3>Shrimp</h3>
             <span>Branding</span>
           </div>
         </a>
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/udang1.png">
           <div class="st-project-meta">
-            <h3>Project Title One</h3>
+            <h3>Shrimp</h3>
             <span>Branding</span>
           </div>
         </a>
@@ -723,7 +727,7 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>News websites and blogs are common sources for web feeds, but feeds are also <br>used to deliver structured</p>
+          <p>Contact me for get shrimp what you want.</p>
         </div>
       </div>
       <div class="container">
@@ -742,7 +746,7 @@
             <div class="st-contact-info st-style1">
               <div class="st-contact-info-in">
                 <h3 class="st-contact-info-title">Contact Info</h3>
-                <div class="st-contact-info-text">Contact is the most important part of businessess. If you need any information about our business, contact the information provided below</div>
+                <div class="st-contact-info-text">Please contact us via whatsapp or email to get the best offer</div>
                 <h3 class="st-contact-info-title">Corporate Office</h3>
                 <ul>
                   <li><i class="fas fa-map-signs"></i>Syek Yusuf Gowa No 12</li>
@@ -802,8 +806,8 @@
         <div class="st-footer-logo">
           <!-- <img src="assets/img/light-img/footer-logo.png" alt="demo"> -->
         </div>
-        <div class="st-footer-text">We understand that it is better to morph virally than to embrace intuitively.<br>
-          We will matrix the power of schemas to redefine.</div>
+        <div class="st-footer-text">We really understand that providing the best service is our duty. <br>
+          therefore we will provide the best offer if you want to contact us.</div>
         <div class="st-footer-social">
           <ul class="st-footer-social-btn st-flex st-mp0">
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
