--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
-            <h1 class="st-hero-title">Chadi Export <br />Shrimp Special From Indonesia!</h1>
+            <h1 class="st-hero-title">Chadi Export <br />Shrimp Special Indonesia!</h1>
             <div class="st-hero-subtitle">
               Providing the best quality shrimp and produced directly from our local fishermen.
             </div>
