--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <!-- Page Title -->
-  <title>CHADI-EXPORT - Special Shrimp From Indonesia</title>
+  <title>CHADI-EXPORT - Special Export Clove Indonesia</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.png" />
   <!-- Stylesheets -->
@@ -95,9 +95,9 @@
       <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
-            <h1 class="st-hero-title">Chadi Export <br />Shrimp Special Indonesia!</h1>
+            <h1 class="st-hero-title">Chadi Export <br />Clove Special Indonesia!</h1>
             <div class="st-hero-subtitle">
-              Providing the best quality shrimp and produced directly from our local fishermen.
+              Providing the best quality clove and produced directly from our local farmer.
             </div>
             <div class="st-btn-group st-style1">
               <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-color1">Contact us on whatsapp</a>
@@ -105,9 +105,9 @@
             </div>
           </div>
         </div>
-        <div class="st-hero-img"><img src="assets/img/udang1.png" alt="demo"></div>
+        <div class="st-hero-img"><img src="assets/img/cengkeh-hero.png" alt="demo"></div>
       </div>
-      <div class="st-hero-slide st-style1 st-flex">
+      <!-- <div class="st-hero-slide st-style1 st-flex">
         <div class="container">
           <div class="st-hero-text st-style1">
             <h1 class="st-hero-title">We are Very Professional  <br /> To Our Work</h1>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="st-hero-img"><img src="assets/img/light-img/hero-img1.png" alt="demo"></div>
-      </div>
+      </div> -->
     </div>
     <!-- End Hero Slider -->
     <!-- Start Icon Box -->
@@ -158,7 +158,7 @@
               </div>
               <h3 class="st-iconbox-title">Hygenic</h3>
               <div class="st-iconbox-text">
-                hygienic shrimp.
+                hygienic clove.
               </div>
             </div>
           </div>
@@ -181,10 +181,10 @@
           <div class="col-lg-6">
             <div class="st-section-heading st-style1">
               <h3>About Us</h3>
-              <h2>WELCOME TO GLOBAL SHRIMP DISTRIBUTOR</h2>
+              <h2>WELCOME TO GLOBAL CLOVE DISTRIBUTOR</h2>
             </div>
             <div class="st-about-text">
-              <p>Indonesia is one of the leading shrimp producers and exporters in the world. By implementing good aquaculture practices, good handling practices, good manufacturing practices, as well as social responsibility according to the International standard, Indonesia produces the best quality shrimp in the world. In cooperation with all the stakeholders, we invite you to discover the taste of 17,000 islands of Indonesian shrimp</p>
+              <p>We are a company engaged in the largest clove export sector in Indonesia. Clove is one of the commodities that grows rapidly in Indonesia, this is supported by the condition of the Indonesian region as a tropical rain country in the world. Indonesia has managed to export as much as US$ 1.03 billion in spices.</p>
               <!-- <ul class="tr-list">
                 <li>One's business To attend to one's duties.</li>
                 <li>Business may refer to many differing activities.</li>
@@ -298,103 +298,52 @@
         </div>
       </div>
       <div class="st-project st-project-carousel owl-carousel st-style1 st-owl-controler1">
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/udang1.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/cengke4.png">
           <div class="st-project-meta">
-            <h3>Shrimp</h3>
+            <h3>Clove</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/udang2.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/type/cengkeh-hero.png">
           <div class="st-project-meta">
-            <h3>Shrimp</h3>
+            <h3>Clove</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/type/udang3.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/dry-clove1.png">
           <div class="st-project-meta">
-            <h3>Shrimp</h3>
+            <h3>Clove</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/type/udang4.png">
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/type/dry-clove2.png">
           <div class="st-project-meta">
-            <h3>Shrimp</h3>
+            <h3>Clove</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/udang1.png">
+
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/type/dry-clove3.png">
           <div class="st-project-meta">
-            <h3>Shrimp</h3>
+            <h3>Clove</h3>
+            <span>Branding</span>
+          </div>
+        </a>
+        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/type/dry-clove4.png">
+          <div class="st-project-meta">
+            <h3>Project Title One</h3>
             <span>Branding</span>
           </div>
         </a>
         <!-- 
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/light-img/project2.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
+        
         <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/light-img/project3.jpg">
           <div class="st-project-meta">
             <h3>Project Title One</h3>
             <span>Branding</span>
           </div>
         </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/light-img/project4.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/light-img/project1.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/light-img/project2.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/light-img/project3.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/light-img/project4.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" data-src="assets/img/light-img/project1.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s" data-src="assets/img/light-img/project2.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s" data-src="assets/img/light-img/project3.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a>
-        <a href="#" class="st-single-project st-bg wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.35s" data-src="assets/img/light-img/project4.jpg">
-          <div class="st-project-meta">
-            <h3>Project Title One</h3>
-            <span>Branding</span>
-          </div>
-        </a> -->
+         -->
       </div>
     </div>
     <!-- End Project Section -->
@@ -492,7 +441,7 @@
           <div class="col-lg-7 offset-lg-1">
             <div class="st-cta text-center st-section">
               <h2 class="st-cta-title">Order us right now!</h2>
-              <div class="st-cta-text">so you can get the best quality shrimp from our country. We will provide the best quality that you will definitely like and enjoy from the quality of our products</div>
+              <div class="st-cta-text">so you can get the best quality clove from our country. We will provide the best quality that you will definitely like and enjoy from the quality of our products</div>
               <div class="st-cta-btn">
                 <a href="https://wa.me/6285173354689" target="_blank" class="st-btn st-style1 st-size1 st-color1">Contact us on whatsapp !</a>
               </div>
@@ -502,7 +451,7 @@
             <div class="st-vertical-middle">
               <div class="st-vertical-middle-in st-flex">
                 <div class="st-cta-img wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
-                  <img src="assets/img/type/udang3.png" alt="demo">
+                  <img src="assets/img/type/cengkeh-hero.png" alt="demo">
                 </div>
               </div>
             </div>
