--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <meta name="author" content="laralink" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
-  <meta name="shrimp" content="shrimp quality export" />
-  <meta name="shrimps" content="shrimp quality export" />
+  <meta name="chadi export" content="export clove best" />
+  <meta name="clove" content="chadi export the best" />
+
 
 
   <!-- Page Title -->
-  <title>CHADI-EXPORT - Special Export Clove Indonesia</title>
+  <title>CHADI  EXPORT - Special Export Clove Indonesia</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.png" />
   <!-- Stylesheets -->
@@ -56,31 +57,10 @@
             <nav class="st-nav st-desktop-nav">
               <ul class="st-nav-list onepage-nav">
                 <li class="st-has-children"><a href="#home" class="smooth-scroll">Home</a>
-                  <!-- <ul>
-                    <li><a href="index.html">Minimal Landing</a></li>
-                    <li><a href="home2.html">Animated Home</a></li>
-                    <li><a href="home7.html">Dark Home</a></li>
-                    <li><a href="home4.html">Creative Landing</a></li>
-                    <li><a href="home3.html">Animated Home 2</a></li>
-                    <li><a href="home5.html">Creative Landing 2</a></li>
-                    <li><a href="home6.html">Minimal Landing 2</a></li>
-                  </ul>
-                </li> -->
+                 
                 <li><a href="#about" class="smooth-scroll">About</a></li>
                 <!-- <li><a href="#service" class="smooth-scroll">Service</a></li> -->
                 <li><a href="#portfolio" class="smooth-scroll">Portfolio</a></li>
-                <!-- <li><a href="#team" class="smooth-scroll">Team</a></li>
-                <li><a href="#price" class="smooth-scroll">Price</a></li> -->
-                <!-- <li class="st-has-children"><a href="#blog" class="smooth-scroll">Blog</a>
-                  <ul>
-                    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                    <li><a href="blog-no-sidebar.html">Blog No Sidebar</a></li>
-                    <li><a href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a></li>
-                    <li><a href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a></li>
-                    <li><a href="blog-details-no-sidebar.html">Blog Details No Sidebar</a></li>
-                  </ul>
-                </li> -->
                 <li><a href="#contact" class="smooth-scroll">Contact</a></li>
               </ul>
             </nav><!-- .st-nav -->
@@ -186,10 +166,10 @@
             <div class="st-about-text">
               <p>We are a company engaged in the largest clove export sector in Indonesia. Clove is one of the commodities that grows rapidly in Indonesia, this is supported by the condition of the Indonesian region as a tropical rain country in the world. Indonesia has managed to export as much as US$ 1.03 billion in spices.</p>
               <!-- <ul class="tr-list">
-                <li>One's business To attend to one's duties.</li>
-                <li>Business may refer to many differing activities.</li>
-                <li>Business representation made by and for business people.</li>
-                <li>Business information about a company or individual.</li>
+                <li>clove.</li>
+                <li>clove.</li>
+                <li>clove.</li>
+                <li>clove.</li>
               </ul> -->
               <a href="#" class="st-btn st-style1 st-size1 st-color2">Get Catalog</a>
             </div>
@@ -200,51 +180,7 @@
     <!-- End About Section -->
 
     <!-- Start Service Section -->
-    <!-- <section class="st-service-section st-section-top" id="service">
-      <div class="container">
-        <div class="st-section-heading st-style2 text-center">
-          <h2>Business Services</h2>
-          <div class="st-seperator">
-            <div class="st-seperator-left-bar wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
-            <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-          </div>
-          <p>Business services are activities that combine or consolidate certain <br>enterprise-wide needed support services</p>
-        </div>
-      </div>
-      <div class="st-owl-controler3-hover">
-        <div class="container">
-          <div class="st-service-carousel owl-carousel st-style2 st-owl-controler3">
-            <div class="st-image-box st-style1 text-center wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s">
-              <a href="#" class="st-image"><img src="assets/img/light-img/service1.png" alt="demo"></a>
-              <div class="st-image-box-info">
-                <h3 class="st-image-box-title"><a href="#">Business Meeting</a></h3>
-                <div class="st-image-box-text">A meeting is when two or more people come together to discuss one or more topics often in a formal or business</div>
-              </div>
-            </div>
-            <div class="st-image-box st-style1 text-center wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.25s">
-              <a href="#" class="st-image"><img src="assets/img/light-img/service2.png" alt="demo"></a>
-              <div class="st-image-box-info">
-                <h3 class="st-image-box-title"><a href="#">Business Analysis</a></h3>
-                <div class="st-image-box-text">Business analysis is a research discipline of identifying business needs and determining solutions to business.</div>
-              </div>
-            </div>
-            <div class="st-image-box st-style1 text-center wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s">
-              <a href="#" class="st-image"><img src="assets/img/light-img/service3.png" alt="demo"></a>
-              <div class="st-image-box-info">
-                <h3 class="st-image-box-title"><a href="#">Business Grow</a></h3>
-                <div class="st-image-box-text">Market penetration is the key for a business growth. Business development processes to develop and implement growth.</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="st-service-background-shap">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="858px" height="924px">
-          <path fill-rule="evenodd"  fill="rgb(249, 251, 255)" d="M664.747,103.039 C653.462,87.314 639.932,72.487 623.957,58.931 C548.874,-4.793 440.575,-17.454 354.139,28.436 C295.555,59.540 256.035,109.725 237.462,166.269 C210.450,248.522 169.585,324.882 114.434,391.411 C-3.108,533.202 -36.669,703.629 44.624,816.957 C149.756,963.519 407.069,959.014 619.349,806.896 C831.627,654.780 918.489,412.653 813.356,266.091 C804.112,253.203 793.682,241.497 782.210,230.960 C739.413,191.657 698.632,150.252 664.747,103.039 Z"/>
-        </svg>
-      </div>
-    </section> -->
+   
     <!-- End Service Section -->
 
     <!-- Start Fun Fact Section -->
@@ -353,85 +289,7 @@
     <!-- End Skill Section -->
 
     <!-- Start Team Section -->
-    <!-- <section class="st-team-wrap st-section" id="team">
-      <div class="container">
-        <div class="st-section-heading st-style2 text-center">
-          <h2>Creative Team</h2>
-          <div class="st-seperator">
-            <div class="st-seperator-left-bar wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
-            <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-          </div>
-          <p>Team members need to learn how to help one another. A team becomes more <br>than just a collection of people when a strong sense.</p>
-        </div>
-      </div>
-      <div class="st-owl-controler3-hover">
-        <div class="container">
-          <div class="st-member-carousel owl-carousel st-style2 st-owl-controler3">
-            <div class="st-team-member text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-              <div class="st-member-img">
-                <img src="assets/img/light-img/team1.png" alt="demo">
-              </div>
-              <div class="st-member-info">
-                <h3 class="st-member-name">Rodney Artichoke</h3>
-                <div class="st-member-designation">UI/UX Designer</div>
-                <ul class="st-member-social-btn st-flex st-mp0">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="st-team-member text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.25s">
-              <div class="st-member-img">
-                <img src="assets/img/light-img/team2.png" alt="demo">
-              </div>
-              <div class="st-member-info">
-                <h3 class="st-member-name">Aston Dark</h3>
-                <div class="st-member-designation">Web Developer</div>
-                <ul class="st-member-social-btn st-flex st-mp0">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="st-team-member text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-              <div class="st-member-img">
-                <img src="assets/img/light-img/team3.png" alt="demo">
-              </div>
-              <div class="st-member-info">
-                <h3 class="st-member-name">Keir Preston</h3>
-                <div class="st-member-designation">Business Advisor</div>
-                <ul class="st-member-social-btn st-flex st-mp0">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="st-team-member text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.35s">
-              <div class="st-member-img">
-                <img src="assets/img/light-img/team4.png" alt="demo">
-              </div>
-              <div class="st-member-info">
-                <h3 class="st-member-name">Criss Donald</h3>
-                <div class="st-member-designation">Business Analysis</div>
-                <ul class="st-member-social-btn st-flex st-mp0">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
+     
     <!-- End Team Section -->
 
     <!-- Start CTA Section -->
