--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <li>clove.</li>
                 <li>clove.</li>
               </ul> -->
-              <a href="#" class="st-btn st-style1 st-size1 st-color2">Get Catalog</a>
+              <a href="./assets/catalog/Chadi Export Catalog.pdf" class="st-btn st-style1 st-size1 st-color2">Get Catalog</a>
             </div>
           </div>
         </div>
