--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>This is our shrimp fortfolio of the highest quality</p>
+          <p>This is our cloves fortfolio of the highest quality</p>
         </div>
       </div>
       <div class="st-project st-project-carousel owl-carousel st-style1 st-owl-controler1">
@@ -534,7 +534,7 @@
             <img src="assets/img/light-img/seperator-icon.png" alt="demo" class="st-seperator-icon">
             <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
           </div>
-          <p>Contact me for get shrimp what you want.</p>
+          <p>Contact me for get clove what you want.</p>
         </div>
       </div>
       <div class="container">
